@@ -37,6 +37,7 @@ Engine features:
 * Added 'save_onstash' property to engine/misc.txt, so it is now possible to disable the automatic save when modifying stash contents.
 * The player's last used Stash tab is now remembered across sessions.
 * Added the ability for NPCs to join the player's party. (Igor Paliychuk)
+* Added support for the 'delay' property used by Events contained in script files.
 
 Engine fixes:
 
